Added static file

--- a/cf-dotnet8-blazorstandaloneapp/cf-dotnet8-blazorstandaloneapp.csproj
+++ b/cf-dotnet8-blazorstandaloneapp/cf-dotnet8-blazorstandaloneapp.csproj
@@ -15,6 +15,9 @@
     <None Update="manifest.yml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Staticfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
